# jsbsim-rocket-test

./: .gitmodules  CMakeLists.txt  README.md  analyze_trajectory.py  build.sh  build_jsbsim.sh  plot_simple.py  rocket.xml  rocket_sim.cpp  rocket_trajectory.csv
aircraft/amateur_rocket/: amateur_rocket.xml  launch.xml
aircraft/my_aircraft/: my_aircraft.json  my_aircraft.xml
aircraft/my_aircraft/Engines/: amateur_rocket_engine.xml  cesaroni_l1720_engine.xml  my_nozzle.xml
aircraft/rocket/: rocket.json  rocket.xml
aircraft/rocket/Engines/: cesaroni_l1720_engine.xml  l1720_nozzle.xml  my_engine.xml
aircraft/rocket/Systems/: Rescue Chute (Ballistic Recovery System).xml
aircraft/suborbital_rocket/: suborbital_rocket.xml
engine/: L1720.xml  L1720_nozzle.xml  solid_motor.xml
scripts/: amateur_rocket.xml
